// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiple spreads 1`] = `
<div
  class="zux foo hux"
  style="z-index: 10; --color: red; --bgColor: red;"
/>
`;

exports[`multiple spreads 2`] = `
<div
  class="zux foo hux"
  style="z-index: 10; --color: red; --bgColor: orange;"
/>
`;

exports[`one spread 1`] = `
<div
  class="boo foo"
  style="--color: blue;"
/>
`;
